# tau_labs

./: CMakeLists.txt  README.md  ffigen.yaml  lab_sound_bridge.podspec  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
bridge/: AudioContext.cpp  AudioHardwareDeviceNode.cpp  AudioListener.cpp  ChannelMergerNode.cpp  ChannelSplitterNode.cpp  ConvolverNode.cpp  LabSoundBridge.cpp  NullDeviceNode.cpp  SfxrNode.cpp  struct.h
build-mac/build-universal/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
build-mac/build-universal/CMakeScripts/: ReRunCMake.make
build-mac/build-universal/LabSound/: cmake_install.cmake
build-mac/build-universal/LabSoundBridge-macos.xcarchive/: Info.plist
build-mac/build-universal/LabSoundBridge.xcodeproj/: project.pbxproj
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  (+1 more)
example/ios/: Podfile
example/lib/: draw_frequency.dart  draw_time_domain.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/windows/: CMakeLists.txt
ffigen/: LabSoundHelper.h
ios/: lab_sound_flutter.podspec  tau_labs.podspec  taulabs.podspec
ios/Classes/: tau_labs.c  taulabs.c
lib/: tau_labs.dart  tau_labs_bindings_generated.dart  taulabs.dart  taulabs_bindings_generated.dart
linux/: CMakeLists.txt
macos/: lab_sound_flutter.podspec  tau_labs.podspec  taulabs.podspec
macos/Classes/: lab_sound_flutter.c
src/: CMakeLists.txt  lab_sound_flutter.c  tau_labs.c
tools/: build_ios.sh  build_mac.sh
windows/: CMakeLists.txt
(+49 files in other folders)
